feat: enhance JPA entities and repositories for improved data handling and migration support